libs/modkit-canonical-errors/tests/ui/retry_after_only_on_service_unavailable.stderr
error[E0599]: no method named `with_retry_after_seconds` found for struct `ResourceErrorBuilder<Resource, Context>` in the current scope
 --> tests/ui/retry_after_only_on_service_unavailable.rs:8:10
  |
7 |       let _err = CanonicalError::internal("bug")
  |  ________________-
8 | |         .with_retry_after_seconds(5)
  | |         -^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `ResourceErrorBuilder<ResourceAbsent, NoContext>`
  | |_________|
  |
