libs/modkit-canonical-errors/tests/ui/retry_after_only_on_service_unavailable.rs
extern crate modkit_canonical_errors;

use modkit_canonical_errors::CanonicalError;

fn main() {
    // with_retry_after_seconds must only be available on ServiceUnavailableBuilder
    let _err = CanonicalError::internal("bug")
        .with_retry_after_seconds(5)
        .create();
}
